--- a/EoeFragment/res/layout/fragment_settings.xml
+++ b/EoeFragment/res/layout/fragment_settings.xml
@@ -9,117 +9,11 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
 
-
-    <LinearLayout
+    <TextView
+        android:id="@+id/fragment_setttings_text"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <ImageView
-            android:id="@+id/head_photo"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_gravity="left"
-            android:src="@drawable/head_default" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" >
-
-                <TextView
-                    android:id="@+id/name_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="35dp"
-                    android:text="姓名："
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:id="@+id/your_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="陈生水"
-                    android:textSize="18sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" >
-
-                <TextView
-                    android:id="@+id/phone_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="电话："
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:id="@+id/phone_number"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="13824410070"
-                    android:textSize="18sp" />
-            </LinearLayout>
-              
-        </LinearLayout>
-         <ImageButton
-        android:id="@+id/qrcode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="20dp"
-        android:src="@drawable/qrcode_img" />
-        
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:id="@+id/address"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="地址："
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/your_address"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="中山大学东校区"
-            android:textSize="18sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:id="@+id/remarks"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="备注："
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/my_remarks"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="我是一只小小鸟"
-            android:textSize="18sp" />
-    </LinearLayout>
-  
- 
-
+        android:text="@string/fragment_personal_text"
+        android:textSize="18sp" />
 
 </LinearLayout>
