--- a/EoeFragment/res/layout/fragment_search.xml
+++ b/EoeFragment/res/layout/fragment_search.xml
@@ -39,7 +39,7 @@
     </FrameLayout>
     
     <ListView
-        android:id="@+id/android:list"
+        android:id="@+id/list"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="18sp" />
