--- a/EoeFragment/res/layout/list_item.xml
+++ b/EoeFragment/res/layout/list_item.xml
@@ -1,43 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal" >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:layout_centerVertical="true"
+    android:orientation="vertical" >
 
-
-
-    <ImageView
-        android:id="@+id/animal"
+    <TextView
+        android:id="@+id/cn_word"
         android:layout_width="wrap_content"
-        android:layout_height="80dp"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:layout_margin="1dp"
-        android:src="@drawable/ic_launcher" />
+        android:layout_height="wrap_content"
+        android:textSize="15sp" />
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/en_word"
         android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="20dp"
-        android:layout_toRightOf="@id/animal"
-        android:orientation="vertical" >
+        android:layout_height="wrap_content"
+        android:textSize="15sp" />
 
-        <TextView
-            android:id="@+id/cn_word"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textColor="#191970"
-            android:textSize="30sp" />
-
-        <TextView
-            android:id="@+id/en_word"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textColor="#800080"
-            android:textSize="30sp" />
-    </LinearLayout>
-
-</RelativeLayout>
+</LinearLayout>
