--- a/EoeFragment/res/layout/activity_query.xml
+++ b/EoeFragment/res/layout/activity_query.xml
@@ -14,54 +14,54 @@
         android:layout_width="match_parent"  
         android:layout_height="match_parent"  
         android:layout_margin="30dp" > 
-        <TextView   
-        android:id="@+id/query_Txttitle"  
-        android:layout_width="wrap_content"  
-        android:layout_height="wrap_content"  
-        android:layout_alignParentLeft="true"  
-        android:gravity="center_horizontal"  
-        android:layout_alignParentRight="true"  
-        android:text="联系人"/>  
+
   
-    <EditText  
+    <TextView  
         android:id="@+id/query_name"  
         android:layout_width="wrap_content"  
         android:layout_height="wrap_content"  
-        android:layout_alignLeft="@id/query_Txttitle"  
-        android:layout_alignRight="@id/query_Txttitle"  
-        android:layout_below="@id/query_Txttitle"   
-        android:layout_marginTop="30dp"  
-        android:hint="姓名"/>  
-    <EditText   
+        android:layout_alignParentLeft="true"   
+        android:layout_alignParentRight="true"  
+        android:layout_marginTop="30dp"/> 
+
+    <LinearLayout
+        android:id="@+id/layout_phone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@id/query_name"
+        android:layout_alignRight="@id/query_name"
+        android:layout_below="@id/query_name"
+        android:orientation="horizontal" >
+
+    <TextView   
         android:id="@+id/query_phonenum"  
         android:layout_width="wrap_content"  
-        android:layout_height="wrap_content"  
-        android:layout_below="@id/query_name"  
-        android:layout_alignLeft="@id/query_name"  
-        android:layout_alignRight="@id/query_name"  
-         android:layout_marginTop="30dp"  
-        android:hint="电话号码"  
-        android:inputType="textCapWords"/>
-    <EditText   
+        android:layout_height="wrap_content"
+        android:layout_weight="1"    
+         android:layout_marginTop="30dp"/>
+    <Button
+        android:id="@+id/dial_button"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/tab_dial_selected"/>
+    </LinearLayout>
+    <TextView   
         android:id="@+id/query_address"  
         android:layout_width="wrap_content"  
         android:layout_height="wrap_content"  
-        android:layout_below="@id/query_phonenum"  
-        android:layout_alignLeft="@id/query_phonenum"  
-        android:layout_alignRight="@id/query_phonenum"  
-         android:layout_marginTop="30dp"  
-        android:hint="地址"  
-        android:inputType="textCapWords"/>
-    <EditText   
+        android:layout_below="@id/layout_phone"  
+        android:layout_alignLeft="@id/layout_phone"  
+        android:layout_alignRight="@id/layout_phone"  
+         android:layout_marginTop="30dp"/>
+    <TextView   
         android:id="@+id/query_remarks"  
         android:layout_width="wrap_content"  
         android:layout_height="wrap_content"  
         android:layout_below="@id/query_address"  
         android:layout_alignLeft="@id/query_address"  
         android:layout_alignRight="@id/query_address"  
-         android:layout_marginTop="30dp"  
-        android:hint="备注"  
-        android:inputType="textCapWords"/>
+         android:layout_marginTop="30dp"/>
 
 
         </RelativeLayout>
