--- a/EoeFragment/res/layout/fragment_search.xml
+++ b/EoeFragment/res/layout/fragment_search.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@drawable/background"
     android:orientation="vertical" >
 
     <com.eoe.tampletfragment.view.TitleView
@@ -42,6 +43,7 @@
         android:id="@+id/list"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:background="#00000000"
         android:textSize="18sp" />
 
 </LinearLayout>
